# controllers/pageController.js
@@ -1,4 +1,5 @@
 import Post from "../models/postModel.js";
+import AyTakvimi from "../models/AyTakvimiModel.js"
 
 const getIndexPage = async (req, res, next) => {
     try {
@@ -18,7 +19,20 @@ const getIndexPage = async (req, res, next) => {
     }
 }
 
-export { getIndexPage }
+const getaytakvimi = async (req, res) => {
+    try {
+        const takvim = await AyTakvimi.find({})
+        console.log(takvim);
+        res.status(201).json({ success: true, data: takvim });
+    } catch (error) {
+        res.status(500).json({
+            success: false,
+            error: error.message
+        });
+    }
+}
+
+export { getIndexPage, getaytakvimi }
 
 
 
